# change-tg-image-metadata

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
test_folder/: text.txt
