[package]
name = "telegram_image_metadata"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
filetime = "0.2.22"
